--- a/index.html
+++ b/index.html
@@ -368,6 +368,8 @@
 <a href="files/03_Kaspar_Rufibach_talks.pdf" class="btn btn-info">Talks (PDF)</a>
 <a href="files/04_Kaspar_Rufibach_teaching.pdf" class="btn btn-info">Teaching (PDF)</a></p>
 
+<p><a href="files/04_Kaspar_Rufibach_teaching.pdf" class="btn btn-light btn-outline btn-large"><i class="fa fa-download"></i>Download CV</a></p>
+
 
     <div class="row">
 
