--- a/working/efspi_estimand/index.html
+++ b/working/efspi_estimand/index.html
@@ -369,7 +369,7 @@ Goals of the working group Bring together statisticians from industry, regulator
 <p>As of August 2019, the working group</p>
 
 <ul>
-<li>32 members (14 from Europe and 18 from US) representing 20 companies,</li>
+<li>has 32 members (14 from Europe and 18 from US) representing 20 companies,</li>
 <li>regularly interacts with seven Health Authorities globally,</li>
 <li>has started to interact with academic colleagues,</li>
 <li>has organized invited sessions at <a href="http://lids2019.pitt.edu/" target="_blank">LIDS 2019</a> and <a href="https://ww2.amstat.org/meetings/jsm/2019/index.cfm" target="_blank">JSM 2019</a>,</li>
@@ -379,27 +379,70 @@ Goals of the working group Bring together statisticians from industry, regulator
 <table>
 <thead>
 <tr>
-<th>Year</th>
+<th align="center">Year</th>
 <th>Event</th>
+<th align="center">Number of talks</th>
 </tr>
 </thead>
 
 <tbody>
 <tr>
-<td>2019</td>
-<td><a href="https://www.efspi.org/documents/events/Events%202019/HTA_Feb_19/EFSPI%20HTA%20Flyer%20Feb%202019%20draft%20updated-converted.pdf" target="_blank">HTA EFSPI SIG 1-day event 2019</a></td>
+<td align="center">2019</td>
+<td><a href="https://www.efspi.org/documents/events/Events%202019/HTA_Feb_19/EFSPI%20HTA%20Flyer%20Feb%202019%20draft%20updated-converted.pdf" target="_blank">HTA EFSPI SIG 1-day event</a></td>
+<td align="center">1</td>
 </tr>
 
 <tr>
-<td>2019</td>
-<td><a href="https://www.conftool.org/dagstat2019/index.php?page=browseSessions&amp;form_session=77#paperID316" target="_blank">DAGStat 2019</a></td>
+<td align="center">2019</td>
+<td><a href="https://www.conftool.org/dagstat2019/index.php?page=browseSessions&amp;form_session=77#paperID316" target="_blank">DAGStat</a></td>
+<td align="center">4</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="http://lids2019.pitt.edu/" target="_blank">LIDS</a></td>
+<td align="center">3</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="https://www.psiweb.org/psi-conference-2019" target="_blank">PSI</a></td>
+<td align="center">2</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="https://www.diaglobal.org/en/flagship/dia-2019/about/conference" target="_blank">DIA annual meeting</a></td>
+<td align="center">1</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="https://kuleuvencongres.be/iscb40" target="_blank">ISCB40</a></td>
+<td align="center">1 (+ 1 poster)</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="https://kuleuvencongres.be/iscb40" target="_blank">JSM</a></td>
+<td align="center">4 + FDA discussant</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="https://www.efspi.org/Documents/Events/Events%202019/Reg%20Stats/EFSPI%20RegStat%20workshop%20Basel%201st%20announcement.PDF" target="_blank">EFSPI Regulatory statistics workshop</a></td>
+<td align="center">1</td>
+</tr>
+
+<tr>
+<td align="center">2019</td>
+<td><a href="https://ww2.amstat.org/meetings/biop/2019/" target="_blank">ASA biopharmaceutical workshop</a></td>
+<td align="center">3</td>
 </tr>
 </tbody>
 </table>
 
-<p>The regulatory committee of the <a href="https://www.efspi.org" target="_blank">European Federation of Statisticians in the Pharmaceutical Industry</a> (EFSPI) co-ordinates regulatory activities across the European Pharmaceutical Statistical community. The key areas of engagement are the Review of regulatory guidance to provide consolidated cross industry responses and identification regulatory statistical issues that are concern across industry for discussion with regulators. In addition, the committee meets yearl with the <a href="https://www.gov.uk/government/organisations/medicines-and-healthcare-products-regulatory-agency" target="_blank">MHRA</a> biostatistics unit and the <a href="https://www.ema.europa.eu/en" target="_blank">EMA</a> <a href="https://www.ema.europa.eu/en/committees/working-parties-other-groups/chmp/biostatistics-working-party" target="_blank">biostatistics working part (BSWP)</a>.</p>
-
-<p><a href="https://www.efspi.org/EFSPI/About_EFSPI/Working_Groups/EFSPI/About_EFSPI/Working_Groups.aspx" target="_blank">More details on EFSPI webpage</a><br></p>
+<p>In November 2018 <a href="https://www.efspi.org" target="_blank">EFSPI</a> has granted the WG the official status as <a href="https://www.efspi.org/EFSPI/Special_Interest_Groups/Estimands_in_Oncology_Applications.aspx?&amp;WebsiteKey=0b28fec8-fcd6-4283-b360-0c689a893140&amp;hkey=956f9eca-da64-48a4-88e4-e77d796bb527" target="_blank"><em>EFSPI Special Interest Group for Estimands in Oncology</em></a> and in June 2019 the <a href="https://community.amstat.org/biop/home" target="_blank">ASA biopharmaceutical section</a> has granted the official status as ASA scientific working group.</p>
 
       </div>
 
