--- a/404.html
+++ b/404.html
@@ -282,7 +282,15 @@
   </ul>
   
   <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_bbs/">External controls in drug development (with Hans Ulrich Burger)</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://numbersman77.netlify.com/talk/2019_ct_europe/">Implications of the ICH E9 estimand addendum on how we develop, run, and analyze clinical trials</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_shanghai/">Multistate models to improve decision-making and effect quantification in clinical trials</a></li>
   </ul>
   
   <ul>
