--- a/404.html
+++ b/404.html
@@ -278,19 +278,19 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_roes/">Before going BIG - seize opportunities for small data: use of multistate models to improve decision-making and effect quantification in clinical trials</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2018_biberach/">Overall survival prediction conditional on post-randomization events: multistate models, landmark analyses, and others</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_bbs/">External controls in drug development (with Hans Ulrich Burger)</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2018_munich/">Randomization and External Controls - When to Use What in a Drug Development Landscape</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_ct_europe/">Implications of the ICH E9 estimand addendum on how we develop, run, and analyze clinical trials</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2017_freiburg/">Treatment effect measures for time-to-event endpoints - estimands, analysis strategies, and beyond</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_shanghai/">Multistate models to improve decision-making and effect quantification in clinical trials</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2018_bochum/">Univariate log-concave density estimation and more efficient treatment effect estimation in pre-specified subgroups displayed in forest plots for time-to-event outcomes</a></li>
   </ul>
   
   <ul>
