--- a/talk/2019_smi/index.html
+++ b/talk/2019_smi/index.html
@@ -371,6 +371,15 @@
     
 
 
+<div class="article-tags">
+  
+  <a class="btn btn-primary btn-outline" href="/tags/invited">invited</a>
+  
+</div>
+
+
+
+
   </div>
 </div>
 
