--- a/talk/2017_basel_efspi/index.html
+++ b/talk/2017_basel_efspi/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://www.efspi.org/EFSPI/Events/Regulatory_Meetings/2nd_EFSPI_Workshop_on_Regulatory_Statistics.aspx?&amp;WebsiteKey=0b28fec8-fcd6-4283-b360-0c689a893140&amp;hkey=972630ce-e4d9-409e-87af-7f5d321760c8" target="_blank" rel="noopener">
-            2nd EFSPI Regulatory Statistics Workshop
+            2nd EFSPI Regulatory Statistics Workshop (invited talk)
             </a>
           </div>
         </div>
