--- a/talk/2017_freiburg/index.html
+++ b/talk/2017_freiburg/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="http://www.biometrische-gesellschaft.de/fileadmin/AG_Daten/PharamzeutischeForschung/PDFs/Agenda_APF_71_Freiburg_Nov_2017.pdf" target="_blank" rel="noopener">
-            Meeting of the Working Group Pharmaceutical Research of the German Region of the IBS
+            Meeting of the Working Group Pharmaceutical Research of the German Region of the IBS (invited talk)
             </a>
           </div>
         </div>
