--- a/talk/2018_bochum/index.html
+++ b/talk/2018_bochum/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Statistics seminar, University of Bochum
+            Statistics seminar, University of Bochum (invited talk)
             
           </div>
         </div>
