--- a/talk/2018_munich/index.html
+++ b/talk/2018_munich/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Roche RxDx summit
+            Roche RxDx summit (invited talk)
             
           </div>
         </div>
