--- a/talk/2019_bayespharma/index.html
+++ b/talk/2019_bayespharma/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="http://www.bayes-pharma.org" target="_blank" rel="noopener">
-            Bayesian Biostatistics Conference (bayes-pharma)
+            Bayesian Biostatistics Conference (bayes-pharma, invited talk)
             </a>
           </div>
         </div>
