--- a/talk/2019_bbs/index.html
+++ b/talk/2019_bbs/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="http://bbs.ceb-institute.org/?p=1248" target="_blank" rel="noopener">
-            Spring seminar of the Basel Biometric Section
+            Spring seminar of the Basel Biometric Section (invited talk)
             </a>
           </div>
         </div>
