--- a/talk/2019_ct_europe/index.html
+++ b/talk/2019_ct_europe/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://www.terrapinn.com/conference/festival-of-biologics/index.stm" target="_blank" rel="noopener">
-            Clinical Trials Europe
+            Clinical Trials Europe (invited talk)
             </a>
           </div>
         </div>
