--- a/talk/2019_psi_webinar/index.html
+++ b/talk/2019_psi_webinar/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://www.psiweb.org/search-video#video_350948799" target="_blank" rel="noopener">
-            PSI webinar
+            PSI webinar (invited talk)
             </a>
           </div>
         </div>
