--- a/talk/2019_roes/index.html
+++ b/talk/2019_roes/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://wp.unil.ch/ibs-roes2019/" target="_blank" rel="noopener">
-            Conference of the Austro-Swiss Region of the IBS
+            Conference of the Austro-Swiss Region of the IBS (invited talk)
             </a>
           </div>
         </div>
