--- a/talk/2019_smi/index.html
+++ b/talk/2019_smi/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://www.smi-online.co.uk/pharmaceuticals/uk/adaptive-designs" target="_blank" rel="noopener">
-            SMi conference on adaptive clinical trials
+            SMi conference on adaptive clinical trials (invited talk)
             </a>
           </div>
         </div>
