--- a/talk/2018_biberach/index.html
+++ b/talk/2018_biberach/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Seminar Biostatistics group Boehringer-Ingelheim
+            Seminar Biostatistics group Boehringer-Ingelheim (invited talk)
             
           </div>
         </div>
