--- a/talk/2018_heidelberg/index.html
+++ b/talk/2018_heidelberg/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Oncology workshop, University of Heidelberg
+            Oncology workshop, University of Heidelberg (invited talk)
             
           </div>
         </div>
