--- a/talk/2018_ms_seminar/index.html
+++ b/talk/2018_ms_seminar/index.html
@@ -337,7 +337,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Modeling and Simulation seminar
+            Modeling and Simulation seminar (invited talk)
             
           </div>
         </div>
