--- a/talk/2018_zurich/index.html
+++ b/talk/2018_zurich/index.html
@@ -336,7 +336,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             
-            Special Colloquia Epidemiology, Biostatistics, and Prevention Institute, University of Zurich
+            Special Colloquia Epidemiology, Biostatistics, and Prevention Institute, University of Zurich (invited talk)
             
           </div>
         </div>
