--- a/404.html
+++ b/404.html
@@ -278,7 +278,7 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2018_4_munich/">Randomization and External Controls - When to Use What in a Drug Development Landscape</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/invited/2016_3_berlin_psi/">Time to think about estimands for time-to-event endpoints? A few examples</a></li>
   </ul>
   
   <ul>
