--- a/404.html
+++ b/404.html
@@ -252,6 +252,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2009_01_mle_logcon/">Maximum Likelihood Estimation of a Log-Concave Density and its Distribution Function</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2008_01_2nd_marshall/">A second Marshall inequality in convex estimation</a></li>
   </ul>
   
@@ -265,10 +269,6 @@
   
   <ul>
     <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2001_01_evk/">Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2016_03_cll11/"></a></li>
   </ul>
   
   
