--- a/404.html
+++ b/404.html
@@ -278,10 +278,6 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2016_3_berlin_psi/">Time to think about estimands for time-to-event endpoints? A few examples</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://numbersman77.netlify.com/talk/invited/2017_2_frankfurt_cddf/">Treatment effect measures for time-to-event endpoints - Estimands and beyond</a></li>
   </ul>
   
@@ -295,6 +291,10 @@
   
   <ul>
     <li><a href="https://numbersman77.netlify.com/talk/invited/2019_5_psi_webinar/">rpact - R Package for Adaptive Clinical Trials</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/invited/2015_1_bern/">Bayesian predictive power: update after a blinded interim and fallacies</a></li>
   </ul>
   
   
