--- a/404.html
+++ b/404.html
@@ -278,14 +278,6 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2017_2_frankfurt_cddf/">Treatment effect measures for time-to-event endpoints - Estimands and beyond</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2017_5_freiburg/">Treatment effect measures for time-to-event endpoints - estimands, analysis strategies, and beyond</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://numbersman77.netlify.com/talk/invited/2018_6_bochum/">Univariate log-concave density estimation and more efficient treatment effect estimation in pre-specified subgroups displayed in forest plots for time-to-event outcomes</a></li>
   </ul>
   
@@ -295,6 +287,14 @@
   
   <ul>
     <li><a href="https://numbersman77.netlify.com/talk/invited/2015_1_bern/">Bayesian predictive power: update after a blinded interim and fallacies</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/invited/2005_stanford/">Log-concave density estimation</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/invited/2006_oberwolfach/"></a></li>
   </ul>
   
   
