--- a/404.html
+++ b/404.html
@@ -278,10 +278,6 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2007_1_stanford/">Max-domain of attraction for log-concave densities and smooth tail index estimation</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://numbersman77.netlify.com/talk/invited/2010_3_rss/">Proposal of the vote of thanks in discussion of Cule, M., Samworth, R., and Stewart, M.: Maximum likelihood estimation of a multidimensional logconcave density</a></li>
   </ul>
   
@@ -295,6 +291,10 @@
   
   <ul>
     <li><a href="https://numbersman77.netlify.com/talk/invited/2006_oberwolfach/">The log-concave density estimator as a smoother</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/invited/2014_3_barcelona/"></a></li>
   </ul>
   
   
