--- a/404.html
+++ b/404.html
@@ -278,19 +278,19 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2010_3_rss/">Proposal of the vote of thanks in discussion of Cule, M., Samworth, R., and Stewart, M.: Maximum likelihood estimation of a multidimensional logconcave density</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/contributed/2005_2_oslo_ems/">Log-concave density estimation</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2009_1_stanford/">Regularized regression models in R</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/contributed/2005_1_oslo_young/">Log-concave density estimation and bump hunting</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2010_2_oberwolfach/">Score regression: a new approach to assess calibration of continuous probabilistic predictions</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/contributed/2004_1_karlsruhe/">Log-concave density estimation and uniform rate of convergence</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2006_oberwolfach/">The log-concave density estimator as a smoother</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/contributed/2003_1_jsm_sf/">Computing maximum likelihood estimators of log-concave densities</a></li>
   </ul>
   
   <ul>
