--- a/404.html
+++ b/404.html
@@ -278,6 +278,10 @@
   <h2>Talks</h2>
   
   <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/invited/2005_stanford/">Log-concave density estimation</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://numbersman77.netlify.com/talk/contributed/2005_2_oslo_ems/">Log-concave density estimation</a></li>
   </ul>
   
@@ -291,10 +295,6 @@
   
   <ul>
     <li><a href="https://numbersman77.netlify.com/talk/contributed/2003_1_jsm_sf/">Computing maximum likelihood estimators of log-concave densities</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/invited/2014_3_barcelona/"></a></li>
   </ul>
   
   
