--- a/publication/index.html
+++ b/publication/index.html
@@ -421,7 +421,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://doi.org/10.1002/pst.1969" target="_blank" rel="noopener">
   Link to journal
 </a>
 
