--- a/publication/stats_articles/2019_04_mirros/index.html
+++ b/publication/stats_articles/2019_04_mirros/index.html
@@ -381,7 +381,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1002/pst.1969" target="_blank" rel="noopener">
   Link to journal
 </a>
 
