--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
       </div>
 
       <div class="pub-publication">
-        <em>Stat. Med.</em>, accepted,
+        <em>Stat. Med.</em>, 38, 4270-4289,
         2019</div>
 
       <div class="pub-links">
@@ -956,8 +956,20 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="http://dx.doi.org/10.1002/bimj.201800250">
+  PDF
+</a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_ROeS_multiearly.pdf">
+  Slides
+</a>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="http://dx.doi.org/10.1002/bimj.201800250">
+  Code
+</a>
 
 
 
@@ -988,10 +1000,10 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_PSI_webinar_adaptive.pdf">
-  PDF
-</a>
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_PSI_webinar_adaptive.pdf">
+  Slides
+</a>
 
 
 
