--- a/publication/index.html
+++ b/publication/index.html
@@ -436,7 +436,7 @@
     Matthias Meller, Jan Beyersmann, Kaspar Rufibach</span>
   (2019).
   <a href="https://numbersman77.netlify.com/publication/stats_articles/2019_03_pfs_os/" itemprop="name">Joint modelling of progression-free and overall survival and computation of correlation measures</a>.
-  <em>Stat. Med.</em>, accepted.
+  <em>Stat. Med.</em>, 38, 4270-4289.
   
   <p>
 
