--- a/talk/index.html
+++ b/talk/index.html
@@ -287,8 +287,20 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="http://dx.doi.org/10.1002/bimj.201800250">
+  PDF
+</a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_ROeS_multiearly.pdf">
+  Slides
+</a>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="http://dx.doi.org/10.1002/bimj.201800250">
+  Code
+</a>
 
 
 
@@ -319,10 +331,10 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_PSI_webinar_adaptive.pdf">
-  PDF
-</a>
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_PSI_webinar_adaptive.pdf">
+  Slides
+</a>
 
 
 
