--- a/talk/invited/2019_5_psi_webinar/index.html
+++ b/talk/invited/2019_5_psi_webinar/index.html
@@ -342,10 +342,10 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/talks/2019_Rufibach_PSI_webinar_adaptive.pdf">
-  PDF
-</a>
 
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/talks/2019_Rufibach_PSI_webinar_adaptive.pdf">
+  Slides
+</a>
 
 
 
