--- a/teaching/supervision/201401_hebeisen/index.html
+++ b/teaching/supervision/201401_hebeisen/index.html
@@ -314,7 +314,7 @@
 
 
       <div class="article-style" itemprop="articleBody">
-        <p>Prepared within seven month full-time internship at Department of Biostatistics, Roche Basel. The academic supervisor was <a href="http://user.math.uzh.ch/hothorn/" target="_blank">Torsten Hothorn</a>, <a href="https://www.uzh.ch/cmsssl/en.html" target="_blank">University of Zurich</a>.</p>
+        <p>Prepared within seven month full-time internship at Department of Biostatistics, Roche Basel. The academic supervisor was <a href="http://user.math.uzh.ch/hothorn/" target="_blank">Torsten Hothorn</a>, <a href="https://www.uzh.ch/cmsssl/en.html" target="_blank">University of Zurich</a>. The thesis is available as PDF <a href="https://www.math.uzh.ch/li/index.php?file&amp;key1=62293" target="_blank">here</a>.</p>
 
 <p><br></p>
 
