--- a/teaching/supervision/201801_li/index.html
+++ b/teaching/supervision/201801_li/index.html
@@ -316,6 +316,10 @@
       <div class="article-style" itemprop="articleBody">
         <p>Initiated within three month full-time internship at Department of Biostatistics, Roche Basel. Co-supervised with Marcel Wolbers (Roche Basel) and the academic supervisor was <a href="http://user.math.uzh.ch/hothorn/" target="_blank">Torsten Hothorn</a>, <a href="https://www.uzh.ch/cmsssl/en.html" target="_blank">University of Zurich</a>.</p>
 
+<p><br></p>
+
+<p><a href="https://www.math.uzh.ch/li/index.php?file&key1=62293" class="btn btn-info"><i class="fa fa-download"></i> Download thesis</a></p>
+
       </div>
 
       
