--- a/talk/index.html
+++ b/talk/index.html
@@ -256,6 +256,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_ClinTrials_Europe_estimands.pdf">
+  Slides
+</a>
+
 
 
 
