--- a/index.html
+++ b/index.html
@@ -702,13 +702,17 @@
     <p><p>Together with my colleagues <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics/teambiostats/held.html" title="Leo Held" target="_blank">Prof. L. Held</a> and <a href="https://www.researchgate.net/profile/Burkhardt_Seifert" title="Burkhardt Seifert" target="_blank">Prof. B. Seifert</a> from the <a href="http://www.biostat.uzh.ch" title="Div of Biostat" target="_blank">Division of Biostatistics</a> at the <a href="http://www.uzh.ch" title="University of Zurich" target="_blank">University of Zurich</a> I have written an introductory biostatistics textbook (in german):
 <br><br></p>
 
-<table>
-  <tr> <td><img src="img/book.jpg" height ="100"><td> <td>
-  <a href="http://www.pearson.ch/HigherEducation/PearsonStudium/1471/9783868941005/Medizinische-Statistik.aspx" title ="book" target ="_blank">Link Pearson (publisher)</a><br><br>
-    <a href="http://www.amazon.de/Medizinische-Statistik-Konzepte-Methoden-Anwendungen/dp/3868941002" title ="book" target ="_blank">Link Amazon</a><br><br>
-    <a href="files/citations/HRS_medStat.bib" title "book bibtex" target ="_blank">bibtex entry</a>
-  <td> </tr>
-</table>
+<p><img src="img/book.jpg">
+<br><br></p>
+
+<p><a href="http://www.pearson.ch/HigherEducation/PearsonStudium/1471/9783868941005/Medizinische-Statistik.aspx" title ="book" target ="_blank">Link Pearson (publisher)</a></p>
+
+<p><br><br></p>
+
+<p><a href="http://www.amazon.de/Medizinische-Statistik-Konzepte-Methoden-Anwendungen/dp/3868941002" title ="book" target ="_blank">Link Amazon</a>
+<br><br></p>
+
+<p><a href="files/citations/HRS_medStat.bib" title "book bibtex" target ="_blank">bibtex entry</a></p>
 
 <p><br><br>
 After a thorough introduction in modern biostatistics in the first part of the book, the second part treats special topics relevant in applications, such as analysis of competing risks, measures of agreement, epidemiology and meta-analysis, or analysis of clinical trials.</p>
