--- a/index.html
+++ b/index.html
@@ -700,25 +700,24 @@
   </div>
   <div class="col-xs-12 col-md-8">
     <p><p>Together with my colleagues <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics/teambiostats/held.html" title="Leo Held" target="_blank">Prof. L. Held</a> and <a href="https://www.researchgate.net/profile/Burkhardt_Seifert" title="Burkhardt Seifert" target="_blank">Prof. B. Seifert</a> from the <a href="http://www.biostat.uzh.ch" title="Div of Biostat" target="_blank">Division of Biostatistics</a> at the <a href="http://www.uzh.ch" title="University of Zurich" target="_blank">University of Zurich</a> I have written an introductory biostatistics textbook (in german):
-<br><br></p>
+<br></p>
 
 <p><img src="img/book.jpg">
-<br><br></p>
+<br></p>
 
-<p><a href="http://www.pearson.ch/HigherEducation/PearsonStudium/1471/9783868941005/Medizinische-Statistik.aspx" title ="book" target ="_blank">Link Pearson (publisher)</a></p>
-
-<p><br><br></p>
+<p><a href="http://www.pearson.ch/HigherEducation/PearsonStudium/1471/9783868941005/Medizinische-Statistik.aspx" title ="book" target ="_blank">Link Pearson (publisher)</a>
+<br></p>
 
 <p><a href="http://www.amazon.de/Medizinische-Statistik-Konzepte-Methoden-Anwendungen/dp/3868941002" title ="book" target ="_blank">Link Amazon</a>
-<br><br></p>
+<br></p>
 
-<p><a href="files/citations/HRS_medStat.bib" title "book bibtex" target ="_blank">bibtex entry</a></p>
+<p><a href="files/citations/HRS_medStat.bib" title "book bibtex" target ="_blank">bibtex entry</a>
+<br></p>
 
-<p><br><br>
-After a thorough introduction in modern biostatistics in the first part of the book, the second part treats special topics relevant in applications, such as analysis of competing risks, measures of agreement, epidemiology and meta-analysis, or analysis of clinical trials.</p>
+<p>After a thorough introduction in modern biostatistics in the first part of the book, the second part treats special topics relevant in applications, such as analysis of competing risks, measures of agreement, epidemiology and meta-analysis, or analysis of clinical trials.</p>
 
-<p><br><br>
-The book is intended to be used by medical students and medical researchers and is used in the medical curriculum at the <a href="http://www.uzh.ch" title="University of Zurich" target="_blank">University of Zurich</a>.</p></p>
+<p><br>
+The book is intended to be used by medical students and medical researchers and is used in the medical curriculum at the <a href="http://www.uzh.ch" title="University of Zurich" target="_blank">University of Zurich</a>.</p>
 </p>
 
     
