--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p>I am a member of several cross-industry working groups. Further information on these is provided below.
+    <p>Together with two colleagues I have written an introductory Medical Statistics textbook.
 <br><br></p>
 
     
