--- a/textbook/medicalstat/index.html
+++ b/textbook/medicalstat/index.html
@@ -334,7 +334,7 @@
         <p>Together with my colleagues <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics/teambiostats/held.html" title="Leo Held" target="_blank">Prof. L. Held</a> and <a href="https://www.researchgate.net/profile/Burkhardt_Seifert" title="Burkhardt Seifert" target="_blank">Prof. B. Seifert</a> from the <a href="http://www.biostat.uzh.ch" title="Div of Biostat" target="_blank">Division of Biostatistics</a> at the <a href="http://www.uzh.ch" title="University of Zurich" target="_blank">University of Zurich</a> I have written an introductory biostatistics textbook (in german):
 <br></p>
 
-<p><img src="img/book.jpg">
+<p><img src="book.jpg">
 <br></p>
 
 <p><a href="http://www.pearson.ch/HigherEducation/PearsonStudium/1471/9783868941005/Medizinische-Statistik.aspx" title ="book" target ="_blank">Link Pearson (publisher)</a>
