--- a/software/bpp/index.html
+++ b/software/bpp/index.html
@@ -335,7 +335,8 @@
 
 <p><a href="http://cran.r-project.org/package=bpp" target="_blank">Download bpp from CRAN</a><br>
 <a href="http://dx.doi.org/10.1080/10543406.2014.972508" target="_blank">Paper 1</a><br>
-<a href="http://dx.doi.org/10.1002/pst.1764" target="_blank">Paper 2</a><br></p>
+<a href="http://dx.doi.org/10.1002/pst.1764" target="_blank">Paper 2</a><br>
+<a href="http://depsy.org/package/r/bpp" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/bpp" alt="" /></p>
 
