--- a/software/logconcens/index.html
+++ b/software/logconcens/index.html
@@ -335,7 +335,8 @@
 
 <p><a href="http://cran.r-project.org/package=logconcens" target="_blank">Download logconcens from CRAN</a><br>
 <a href="http://dx.doi.org/10.1214/14-EJS930" target="_blank">Paper</a><br>
-<a href="https://arxiv.org/abs/0707.4643" target="_blank">Technical report</a><br></p>
+<a href="https://arxiv.org/abs/0707.4643" target="_blank">Technical report</a><br>
+<a href="http://depsy.org/package/r/logconcens" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/logconcens" alt="" /></p>
 
