--- a/software/logcondiscr/index.html
+++ b/software/logcondiscr/index.html
@@ -334,7 +334,8 @@
         <p>Given independent and identically distributed observations X(1), &hellip;, X(n), allows to compute the maximum likelihood estimator (MLE) of probability mass function (pmf) under the assumption that it is log-concave, see Weyermann (2007) and Balabdaoui, Jankowski, Rufibach, and Pavlides (2012). The main functions of the package are &lsquo;logConDiscrMLE&rsquo; that allows computation of the log-concave MLE, &lsquo;logConDiscrCI&rsquo; that computes pointwise confidence bands for the MLE, and &lsquo;kInflatedLogConDiscr&rsquo; that computes a mixture of a log-concave PMF and a point mass at k.</p>
 
 <p><a href="http://cran.r-project.org/package=logcondiscr" target="_blank">Download logcondiscr from CRAN</a><br>
-<a href="http://dx.doi.org/10.1111/rssb.12011" target="_blank">Paper</a><br></p>
+<a href="http://dx.doi.org/10.1111/rssb.12011" target="_blank">Paper</a><br>
+<a href="http://depsy.org/package/r/logcondiscr" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/logcondiscr" alt="" /></p>
 
