--- a/software/ordfacreg/index.html
+++ b/software/ordfacreg/index.html
@@ -334,7 +334,8 @@
         <p>In biomedical studies, researchers are often interested in assessing the association between one or more ordinal explanatory variables and an outcome variable, at the same time adjusting for covariates of any type. The outcome variable may be continuous, binary, or represent censored survival times. In the absence of a precise knowledge of the response function, using monotonicity constraints on the ordinal variables improves efficiency in estimating parameters, especially when sample sizes are small. This package implements an active set algorithm that efficiently computes such estimators.</p>
 
 <p><a href="http://cran.r-project.org/package=OrdFacReg" target="_blank">Download OrdFacReg from CRAN</a><br>
-<a href="http://dx.doi.org/10.1016/j.csda.2010.01.014" target="_blank">Paper</a><br></p>
+<a href="http://dx.doi.org/10.1016/j.csda.2010.01.014" target="_blank">Paper</a><br>
+<a href="http://depsy.org/package/r/OrdFacReg" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/OrdFacReg" alt="" /></p>
 
