--- a/software/survregcenscov/index.html
+++ b/software/survregcenscov/index.html
@@ -334,7 +334,8 @@
         <p>The main function of this package allows estimation of a Weibull Regression for a right-censored endpoint, one interval-censored covariate, and an arbitrary number of non-censored covariates. Additional functions allow to switch between different parametrizations of Weibull regression used by different <a href="http://www.r-project.org" target="_blank">R</a> functions, inference for the mean difference of two arbitrarily censored Normal samples, and estimation of canonical parameters from censored samples for several distributional assumptions.</p>
 
 <p><a href="http://cran.r-project.org/package=SurvRegCensCov" target="_blank">Download SurvRegCensCov from CRAN</a><br>
-<a href="https://arxiv.org/abs/1402.0432" target="_blank">Technical report</a><br></p>
+<a href="https://arxiv.org/abs/1402.0432" target="_blank">Technical report</a><br>
+<a href="http://depsy.org/package/r/SurvRegCensCov" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/SurvRegCensCov" alt="" /></p>
 
