--- a/textbook/medicalstat/index.html
+++ b/textbook/medicalstat/index.html
@@ -357,6 +357,8 @@ The book is intended to be used by medical students and medical researchers and 
   
   <a class="btn btn-primary btn-outline" href="/tags/medicalstatistics">medicalstatistics</a>
   
+  <a class="btn btn-primary btn-outline" href="/tags/textbook">textbook</a>
+  
 </div>
 
 
