--- a/talk/index.html
+++ b/talk/index.html
@@ -792,6 +792,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2018_Rufibach_immortal_bias.pdf">
+  Slides
+</a>
+
 
 
 
