--- a/working/efspi_estimand/index.html
+++ b/working/efspi_estimand/index.html
@@ -450,7 +450,7 @@ Goals of the working group Bring together statisticians from industry, regulator
 </tbody>
 </table>
 
-<p>In November 2018 <a href="https://www.efspi.org" target="_blank">EFSPI</a> has granted the WG the official status as <a href="https://www.efspi.org/EFSPI/Special_Interest_Groups/Estimands_in_Oncology_Applications.aspx?&amp;WebsiteKey=0b28fec8-fcd6-4283-b360-0c689a893140&amp;hkey=956f9eca-da64-48a4-88e4-e77d796bb527" target="_blank"><em>EFSPI Special Interest Group for Estimands in Oncology</em></a> and in June 2019 the <a href="https://community.amstat.org/biop/home" target="_blank"><em>ASA biopharmaceutical section</em></a> has granted the official status as <a href="https://community.amstat.org/biop/workinggroups/eio" target="_blank">ASA scientific working group</a>.</p>
+<p>In November 2018 <a href="https://www.efspi.org" target="_blank">EFSPI</a> has granted the WG the official status as <a href="https://www.efspi.org/EFSPI/Special_Interest_Groups/Estimands_in_Oncology_Applications.aspx?&amp;WebsiteKey=0b28fec8-fcd6-4283-b360-0c689a893140&amp;hkey=956f9eca-da64-48a4-88e4-e77d796bb527" target="_blank"><em>European special interest group &ldquo;Estimands in oncology&rdquo;, sponsored by PSI and EFSPI</em></a> and in June 2019 the <a href="https://community.amstat.org/biop/home" target="_blank"><em>ASA biopharmaceutical section</em></a> has granted the official status as <a href="https://community.amstat.org/biop/workinggroups/eio" target="_blank">ASA scientific working group</a>.</p>
 
       </div>
 
