--- a/talk/index.html
+++ b/talk/index.html
@@ -273,6 +273,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/talks/2019_Rufibach_MRC_Cambridge_multistate.pdf">
+  Slides
+</a>
+
 
 
 
