--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
   </div>
   <div class="talk-metadata">
     
-            Statistics seminar, Cambridge University (invited talk)
+            Seminar, MRC Biostatistics Unit, Cambridge University (invited talk)
     
   </div>
   <div class="talk-links">
