--- a/talk/index.html
+++ b/talk/index.html
@@ -264,7 +264,7 @@
   </div>
   <div class="talk-metadata">
     
-            Statistics seminar, Cambridge University (invited talk)
+            Seminar, MRC Biostatistics Unit, Cambridge University (invited talk)
     
   </div>
   <div class="talk-links">
