--- a/talk/invited/2019_8_cambridge/index.html
+++ b/talk/invited/2019_8_cambridge/index.html
@@ -336,9 +336,9 @@
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
-            
-            Statistics seminar, Cambridge University (invited talk)
-            
+            <a href="https://www.mrc-bsu.cam.ac.uk/event/bsu-semniar-series-before-going-big-seize-opportunities-for-small-data-use-of-multistate-models-to-improve-decision-making-and-effect-quantification-in-clinical-trials/" target="_blank" rel="noopener">
+            Seminar, MRC Biostatistics Unit, Cambridge University (invited talk)
+            </a>
           </div>
         </div>
       </div>
