--- a/talk/invited/2020_1_zuekost/index.html
+++ b/talk/invited/2020_1_zuekost/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/talk/invited/2020_1_zuekost/">
-  <meta property="og:title" content="Update Bayesian predictive power after a blinded interim analysis | Kaspar Rufibach">
+  <meta property="og:title" content="tba | Kaspar Rufibach">
   <meta property="og:description" content="tba.">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Update Bayesian predictive power after a blinded interim analysis | Kaspar Rufibach</title>
+  <title>tba | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Update Bayesian predictive power after a blinded interim analysis</h1>
+      <h1 itemprop="name">tba</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Update%20Bayesian%20predictive%20power%20after%20a%20blinded%20interim%20analysis&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f"
+         href="https://twitter.com/intent/tweet?text=tba&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f&amp;title=Update%20Bayesian%20predictive%20power%20after%20a%20blinded%20interim%20analysis"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f&amp;title=tba"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f&amp;title=Update%20Bayesian%20predictive%20power%20after%20a%20blinded%20interim%20analysis"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f&amp;title=tba"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Update%20Bayesian%20predictive%20power%20after%20a%20blinded%20interim%20analysis&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f">
+         href="mailto:?subject=tba&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2finvited%2f2020_1_zuekost%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
