--- a/talk/index.html
+++ b/talk/index.html
@@ -254,7 +254,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_1_zuekost/">Update Bayesian predictive power after a blinded interim analysis</a></span>
+  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_1_zuekost/">tba</a></span>
   <div itemprop="startDate">
     
     Feb 28, 2020
