--- a/index.html
+++ b/index.html
@@ -1930,7 +1930,7 @@
 
           <span class="project-title">
           
-            <a href="https://tinyurl/oncoestimand" target="_blank" rel="noopener">
+            <a href="https://tinyurl.com/oncoestimand" target="_blank" rel="noopener">
           
           Oncology estimand working group
           </a>
