--- a/talk/index.html
+++ b/talk/index.html
@@ -318,7 +318,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_2_swissmedic/">Use of multistate models to improve decision-making in clinical trials</a></span>
+  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_2_swissmedic/">A statistician&#39;s view on complex innovative designs</a></span>
   <div itemprop="startDate">
     
     Feb 25, 2020
