--- a/talk/index.html
+++ b/talk/index.html
@@ -254,7 +254,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_4_psi_cam/">Use of multistate models to improve decision-making in clinical trials</a></span>
+  <span itemprop="name"><a href="https://numbersman77.netlify.com/talk/invited/2020_4_psi_cam/">MIRROS: Planning a Phase 3 trial with time-to-event endpoint, a cure proportion, and a futility interim analysis using response</a></span>
   <div itemprop="startDate">
     
     Apr 1, 2020
