--- a/teaching/stats/202005_toolbox/index.html
+++ b/teaching/stats/202005_toolbox/index.html
@@ -333,6 +333,8 @@
       <div class="article-style" itemprop="articleBody">
         <p>Half-day pre-conference course at the Roche Biostatistics European Regional Conference, Zurich, Switzerland. Together with Marcel Wolbers.</p>
 
+<p><em>COURSE POSTPONED BECAUSE OF COVID-19 EPIDEMIC</em></p>
+
       </div>
 
       
